feat: Complete rebrand to Biz-CoPilot
- Updated app name from 'expense-tracker' to 'Biz-CoPilot'
- Rebranded all UI components (Login, Signup, Dashboard)
- Updated package.json with new name, description, and homepage
- Updated index.html with new meta tags and branding
- Fixed signup route (was missing from App.jsx)
- Updated all documentation (README, ARCHITECTURE, DEPLOYMENT, SECURITY)
- Added comprehensive rebranding guide (REBRANDING_COMPLETE.md)
- Added Firebase configuration guide (FIREBASE_CONFIG_GUIDE.md)
- Updated brand identity to reflect co-pilot partnership concept
- Maintained all functionality and security features

Brand Identity:
- Name: Biz-CoPilot
- Tagline: Your Business Co-Pilot, Every Step of the Way
- Domain: biz-copilot.nl & bizcopilot.nl
- Focus: Dutch entrepreneurs and small businesses

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "expense-tracker-app",
+  "name": "biz-copilot",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "Intelligent business management platform for Dutch entrepreneurs and small businesses",
+  "author": "GrandCart Creations",
+  "homepage": "https://biz-copilot.nl",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
