feat(storage, ui): Fix Firebase Storage uploads and enhance expense table layout
This commit resolves critical file upload issues and significantly improves the expense tracker UI.

**Firebase Storage & CORS Fixes:**
- Fixed CORS configuration by adding OPTIONS method and Firebase Storage-specific headers
  (x-goog-resumable, x-goog-hash, x-goog-metadata-generation, etc.)
- Corrected storageBucket in firebase.js from .appspot.com to .firebasestorage.app
- Created and deployed storage.rules to allow authenticated file uploads
- Added apply-cors.sh script to automate CORS configuration
- Improved upload progress tracking for multi-file uploads

**UI/UX Improvements:**
- Removed max-w-7xl constraint to utilize full screen width
- Eliminated horizontal scrolling by removing overflow-x-auto
- Optimized column widths with fixed sizes for Date, Category, Amount, Files, Actions
- Made Description column flexible to expand and wrap text
- Reduced padding (px-6 to px-3) for more compact display
- Added text truncation with tooltips for Vendor, Invoice #, and Bank Account columns
- Enhanced table responsiveness across all screen sizes

**Files Added:**
- cors.json: CORS configuration with proper Firebase Storage headers
- storage.rules: Security rules for authenticated file uploads
- apply-cors.sh: Script to apply CORS configuration to Firebase Storage bucket
- CORS_FIX_GUIDE.md: Comprehensive troubleshooting guide
- src/components/FileUpload.jsx: Reusable file upload component

**Files Modified:**
- src/firebase.js: Fixed storageBucket configuration
- src/components/ExpenseTracker.jsx: Full-width layout and upload improvements
- firebase.json: Added storage rules configuration

Result: File uploads now work correctly and expense table uses full screen width
without horizontal scrolling.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "description": "Intelligent business management platform for Dutch entrepreneurs and small businesses",
   "author": "GrandCart Creations",
   "homepage": "https://biz-copilot.nl",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/GrandCart-Creations/biz-copilot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/GrandCart-Creations/biz-copilot/issues"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
