--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "crypto-browserify": "^3.12.1",
     "firebase": "^12.4.0",
     "lucide-react": "^0.546.0",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
