--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "firebase": "^12.4.0",
     "lucide-react": "^0.546.0",
     "otplib": "^12.0.1",
+    "pdfjs-dist": "^4.3.394",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "tesseract.js": "^6.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
