feat: capture vendor addresses and update Benelux messaging

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "description": "Intelligent business management platform for Dutch entrepreneurs and small businesses",
+  "description": "Intelligent business management platform for Benelux entrepreneurs and small businesses",
   "author": "GrandCart Creations",
   "homepage": "https://biz-copilot.nl",
   "repository": {
