--- a/functions/package.json
+++ b/functions/package.json
@@ -14,13 +14,12 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.5.0",
-    "@sendgrid/mail": "^8.1.3"
+    "@sendgrid/mail": "^8.1.3",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^6.6.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
-
