--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "tesseract.js": "^6.0.1",
+    "tinycolor2": "^1.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
