--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.6.0",
     "exceljs": "^4.4.0",
     "firebase": "^12.4.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "otplib": "^12.0.1",
     "pdfjs-dist": "^4.3.394",
