--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.4.1",
     "tesseract.js": "^6.0.1",
     "tinycolor2": "^1.6.0",
     "xlsx": "^0.18.5"
