feat: Complete infrastructure audit and configuration improvements
This commit implements a comprehensive infrastructure audit with critical
fixes and optimizations for biz-copilot.nl domain integration and production
readiness.

## Infrastructure Audit & Configuration

### Firebase Hosting & Security
- Updated Content Security Policy (CSP) to explicitly include biz-copilot.nl
  and www.biz-copilot.nl in connect-src directives
- Enhanced security headers configuration in firebase.json
- Verified and documented custom domain setup

### Cloud Functions Improvements
- Updated all Cloud Functions fallback URLs from localhost to production
  domain (https://biz-copilot.nl)
- Fixed APP_URL secret usage across all email functions:
  - sendInvitationEmail
  - sendInvoiceEmail
  - sendQuoteEmail
  - sendReceiptEmail
- Ensures all email links point to correct production domain

### Build & Performance Optimizations
- Added explicit base URL configuration in vite.config.js
- Implemented manual code splitting for better performance:
  - vendor-react: React core libraries
  - vendor-firebase: Firebase SDK
  - vendor-charts: Recharts library
  - vendor-pdf: PDF generation libraries
  - vendor-excel: Spreadsheet libraries
  - vendor-date: Date utilities
- Optimized chunk sizes to improve initial load times
- Increased chunk size warning limit to 600KB

### Deployment Scripts
- Added predeploy hook to automatically build before deployment
- Added deploy and deploy:all npm scripts for streamlined deployments
- Created automated verification script (scripts/verify-deployment.sh)

### Documentation
- Created comprehensive audit report (COMPLETE_AUDIT_REPORT.md)
- Added step-by-step API key configuration guide (ADD_API_KEY_REFERRER_STEPS.md)
- Created verification checklist (VERIFICATION_CHECKLIST.md)
- Added final verification guide (FINAL_VERIFICATION.md)
- Created audit summary (AUDIT_SUMMARY.md)
- Added .env.example for developer onboarding

### UI/UX Fixes
- Fixed white-on-white t

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "firebase deploy --only hosting",
+    "deploy:all": "npm run build && firebase deploy",
     "security:audit": "npm audit",
     "security:audit:prod": "npm audit --production"
   },
