--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "@sendgrid/mail": "^8.1.3",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
-    "jspdf": "^2.5.2"
+    "jspdf": "^2.5.2",
+    "openai": "^4.104.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
