--- a/firebase.json
+++ b/firebase.json
@@ -60,7 +60,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://biz-copilot.nl https://www.biz-copilot.nl https://*.firebaseapp.com https://*.googleapis.com https://*.cloudfunctions.net wss://*.firebaseio.com; frame-src 'self' https://*.google.com;"
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdn.tailwindcss.com https://apis.google.com; style-src 'self' 'unsafe-inline' https://cdn.tailwindcss.com; img-src 'self' data: https: blob:; font-src 'self' data:; connect-src 'self' https://biz-copilot.nl https://www.biz-copilot.nl https://*.firebaseapp.com https://*.googleapis.com https://*.cloudfunctions.net https://firebasestorage.googleapis.com wss://*.firebaseio.com; frame-src 'self' https://*.google.com https://firebasestorage.googleapis.com blob:;"
           }
         ]
       }
